all done in backend except ai